Lance adds a sitemap pictures and add it into stylesheet

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               <a href="index.html#grid" class="sgnav__item sgnav__item--anchor">Grid</a>
             </li>
             <li>
+              <a href="index.html#sitemap" class="sgnav__item sgnav__item--anchor">Sitemap</a>
+            </li>
+            <li>
               <a href="wireframes.html" class="sgnav__item sgnav__item--page">Wireframes</a>
             </li>
             <li>
@@ -811,6 +814,17 @@
   &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;</code></pre>
           </div>
+        </section>
+        <section>
+          <h2 id="Sitemap">
+            Sitemap <a href="#sitemap" class="anchor"></a>
+          </h2>
+          <figure>
+
+               <img src="img/sitemap.png" alt="sitemap">
+               <figcaption>This is the sitemap for our website.</figcaption>
+
+             </figure>
         </section>
         <footer>
           <p class="footer-content">
