--- a/citations.html
+++ b/citations.html
@@ -47,7 +47,7 @@
         </ul>
         <footer>
           <p class="footer-content">
-            Created by Charlie Chao for IAT339.
+            Created by Charlie Chao and Lance Zheng for IAT339.
           </p>
         </footer>
       </div>
