--- a/wireframes.html
+++ b/wireframes.html
@@ -48,7 +48,7 @@
         </p>
         <footer>
           <p class="footer-content">
-            Created by Charlie Chao for IAT339.
+            Created by Charlie Chao and Lance Zheng for IAT339.
           </p>
         </footer>
       </div>
