Move style guide pages to styleguide/.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -5,8 +5,8 @@
   <title>Mighty Life Fitness</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One%7COpen+Sans:400,400i,700" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="../css/normalize.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
   <main class="wrap">
@@ -240,7 +240,7 @@
             Use professionally shot high-quality images for hero backgrounds and figures.
           </p>
           <p>
-            <img src="img/imagery.jpg" alt="Imagery for MLF." class="img-responsive">
+            <img src="../img/imagery.jpg" alt="Imagery for MLF." class="img-responsive">
           </p>
         </section>
         <section>
@@ -252,7 +252,7 @@
             Use the <a href="https://material.io/icons/" target="_blank">Material Design icon set</a>. Icons should be used alongside labels. They shouldn't be used alone unless it's part of an image.
           </p>
           <p>
-            <img src="img/icons.png" alt="Example usage of icons." class="img-responsive">
+            <img src="../img/icons.png" alt="Example usage of icons." class="img-responsive">
           </p>
         </section>
         <section>
