--- a/styleguide/wireframes.html
+++ b/styleguide/wireframes.html
@@ -5,8 +5,8 @@
   <title>Mighty Life Fitness</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One%7COpen+Sans:400,400i,700" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="../css/normalize.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
   <main class="wrap">
@@ -23,10 +23,10 @@
               <a href="index.html" class="sgnav__item">Style Guide</a>
             </li>
             <li>
-              <a href="wireframes.html" class="sgnav__item sgnav__item--page">Wireframes</a>
+              <a href="wireframes.html" class="sgnav__item sgnav__item--page sgnav__item--active">Wireframes</a>
             </li>
             <li>
-              <a href="citations.html" class="sgnav__item sgnav__item--page sgnav__item--active">Citations</a>
+              <a href="citations.html" class="sgnav__item sgnav__item--page">Citations</a>
             </li>
           </ul>
         </nav>
@@ -35,16 +35,17 @@
     <div class="content">
       <div class="content-wrap">
         <h1>
-          Citations
+          Wireframes
         </h1>
-        <ul class="citations">
-          <li>
-            Google. &ldquo;Google/Material-Design-Icons.&rdquo; <em>GitHub,</em> 11 Jan. 2018, <a href="https://github.com/google/material-design-icons" target="_blank">github.com/google/material-design-icons</a>.
-          </li>
-          <li>
-            Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, 13 Jan. 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
-          </li>
-        </ul>
+        <p>
+          <strong>Task:</strong> Sign up for membership.<br>
+          For smartwatch, smartphone and smart TV. Click the image to enlarge.
+        </p>
+        <p>
+          <a href="../img/wireframes.jpg" target="_blank">
+            <img src="../img/wireframes.jpg" alt="Wireframes" class="img-responsive">
+          </a>
+        </p>
         <footer>
           <p class="footer-content">
             Created by Charlie Chao and Lance Zheng for IAT339.
