Separate style guide styles from website styles.

--- a/styleguide/citations.html
+++ b/styleguide/citations.html
@@ -7,37 +7,38 @@
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One%7COpen+Sans:400,400i,700" rel="stylesheet">
   <link href="../css/normalize.css" rel="stylesheet">
   <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/styleguide.css" rel="stylesheet">
 </head>
 <body>
-  <main class="wrap">
-    <div class="sidebar">
-      <header class="sidebar__content">
-        <h1 class="sidebar__logo">
+  <main class="sg-wrap">
+    <div class="sg-sidebar">
+      <header class="sg-sidebar__content">
+        <h1 class="sg-sidebar__logo">
           <a href="index.html">
             Mighty Life Fitness
           </a>
         </h1>
-        <nav class="sgnav">
-          <ul class="sgnav__list">
+        <nav class="sg-nav">
+          <ul class="sg-nav__list">
             <li>
-              <a href="index.html" class="sgnav__item">Style Guide</a>
+              <a href="index.html" class="sg-nav__item">Style Guide</a>
             </li>
             <li>
-              <a href="wireframes.html" class="sgnav__item sgnav__item--page">Wireframes</a>
+              <a href="wireframes.html" class="sg-nav__item sg-nav__item--page">Wireframes</a>
             </li>
             <li>
-              <a href="citations.html" class="sgnav__item sgnav__item--page sgnav__item--active">Citations</a>
+              <a href="citations.html" class="sg-nav__item sg-nav__item--page sg-nav__item--active">Citations</a>
             </li>
           </ul>
         </nav>
       </header>
     </div>
-    <div class="content">
-      <div class="content-wrap">
+    <div class="sg-content">
+      <div class="sg-content-wrap">
         <h1>
           Citations
         </h1>
-        <ul class="citations">
+        <ul class="sg-citations">
           <li>
             Google. &ldquo;Google/Material-Design-Icons.&rdquo; <em>GitHub,</em> 11 Jan. 2018, <a href="https://github.com/google/material-design-icons" target="_blank">github.com/google/material-design-icons</a>.
           </li>
@@ -46,7 +47,7 @@
           </li>
         </ul>
         <footer>
-          <p class="footer-content">
+          <p class="sg-footer-content">
             Created by Charlie Chao and Lance Zheng for IAT339.
           </p>
         </footer>
