Complete header bar and navigation.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <main>
+    <header class="header-bar">
+      <div class="wrap">
+        <h1 class="logo-wrap">
+          <a href="index.html" class="logo">
+            Mighty Life<br> Fitness
+          </a>
+        </h1>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="join.html" class="nav-btn">Join Us</a>
+            </li>
+            <ul class="nav__menu">
+              <li class="nav__item nav__item--toggle">
+                <a href="#" class="nav-btn">Menu</a>
+              </li><!--
+              --><li class="nav__item">
+                <a href="events.html" class="nav-btn">Events</a>
+              </li><!--
+              --><li class="nav__item">
+                <a href="about.html" class="nav-btn">About</a>
+              </li><!--
+              --><li class="nav__item">
+                <a href="contact.html" class="nav-btn">Contact</a>
+              </li>
+            </ul>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </main>
   <script src="js/modernizr.js"></script>
 </body>
 </html>
