--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -475,7 +475,7 @@
             <a href="#nav" class="anchor"></a>
           </h2>
           <div class="sg-component-preview">
-            <div class="sg-component-dark clearfix">
+            <div class="sg-component-dark sg-component-nav clearfix">
               <nav class="nav">
                 <ul class="nav__list">
                   <li>
