Update nav in style guide.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -478,21 +478,23 @@
             <div class="sg-component-dark sg-component-nav clearfix">
               <nav class="nav">
                 <ul class="nav__list">
-                  <li>
-                    <a href="/" class="nav-btn">Home</a>
+                  <li class="nav__item">
+                    <a href="join.html" class="nav-btn">Join Us</a>
                   </li>
-                  <li>
-                    <a href="/about" class="nav-btn">About</a>
-                  </li>
-                  <li>
-                    <a href="/contact" class="nav-btn">Contact</a>
-                  </li>
-                  <li>
-                    <a href="/login" class="nav-btn">Login</a>
-                  </li>
-                  <li>
-                    <a href="/register" class="nav-btn nav-btn--cta">Register</a>
-                  </li>
+                  <ul class="nav__menu">
+                    <li class="nav__item nav__item--toggle">
+                      <a href="#" class="nav-btn">Menu</a>
+                    </li><!--
+                    --><li class="nav__item">
+                      <a href="events.html" class="nav-btn">Events</a>
+                    </li><!--
+                    --><li class="nav__item">
+                      <a href="about.html" class="nav-btn">About</a>
+                    </li><!--
+                    --><li class="nav__item">
+                      <a href="contact.html" class="nav-btn">Contact</a>
+                    </li>
+                  </ul>
                 </ul>
               </nav>
             </div>
@@ -501,21 +503,23 @@
               <p class="sg-component-label">Code</p>
               <pre><code>&lt;nav class=&quot;nav&quot;&gt;
   &lt;ul class=&quot;nav__list&quot;&gt;
-    &lt;li&gt;
-      &lt;a href=&quot;/&quot; class=&quot;nav-btn&quot;&gt;Home&lt;/a&gt;
+    &lt;li class=&quot;nav__item&quot;&gt;
+      &lt;a href=&quot;join.html&quot; class=&quot;nav-btn&quot;&gt;Join Us&lt;/a&gt;
     &lt;/li&gt;
-    &lt;li&gt;
-      &lt;a href=&quot;/about&quot; class=&quot;nav-btn&quot;&gt;About&lt;/a&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;a href=&quot;/contact&quot; class=&quot;nav-btn&quot;&gt;Contact&lt;/a&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;a href=&quot;/login&quot; class=&quot;nav-btn&quot;&gt;Login&lt;/a&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;a href=&quot;/register&quot; class=&quot;nav-btn nav-btn--cta&quot;&gt;Register&lt;/a&gt;
-    &lt;/li&gt;
+    &lt;ul class=&quot;nav__menu&quot;&gt;
+      &lt;li class=&quot;nav__item nav__item--toggle&quot;&gt;
+        &lt;a href=&quot;#&quot; class=&quot;nav-btn&quot;&gt;Menu&lt;/a&gt;
+      &lt;/li&gt;&lt;!--
+      --&gt;&lt;li class=&quot;nav__item&quot;&gt;
+        &lt;a href=&quot;events.html&quot; class=&quot;nav-btn&quot;&gt;Events&lt;/a&gt;
+      &lt;/li&gt;&lt;!--
+      --&gt;&lt;li class=&quot;nav__item&quot;&gt;
+        &lt;a href=&quot;about.html&quot; class=&quot;nav-btn&quot;&gt;About&lt;/a&gt;
+      &lt;/li&gt;&lt;!--
+      --&gt;&lt;li class=&quot;nav__item&quot;&gt;
+        &lt;a href=&quot;contact.html&quot; class=&quot;nav-btn&quot;&gt;Contact&lt;/a&gt;
+      &lt;/li&gt;
+    &lt;/ul&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</code></pre>
           </div>
