Add hero. Add sticky footer. Use font variable.

--- a/index.html
+++ b/index.html
@@ -9,37 +9,67 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main>
-    <header class="header-bar">
-      <div class="wrap">
-        <h1 class="logo-wrap">
-          <a href="index.html" class="logo">
-            Mighty Life<br> Fitness
-          </a>
-        </h1>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="join.html" class="nav-btn">Join Us</a>
-            </li>
-            <ul class="nav__menu">
-              <li class="nav__item nav__item--toggle">
-                <a href="#" class="nav-btn">Menu</a>
-              </li><!--
-              --><li class="nav__item">
-                <a href="events.html" class="nav-btn">Events</a>
-              </li><!--
-              --><li class="nav__item">
-                <a href="about.html" class="nav-btn">About</a>
-              </li><!--
-              --><li class="nav__item">
-                <a href="contact.html" class="nav-btn">Contact</a>
+  <main class="wrap-all">
+    <div class="wrap-content">
+      <header class="header-bar">
+        <div class="wrap">
+          <h1 class="logo-wrap">
+            <a href="index.html" class="logo">
+              Mighty Life<br> Fitness
+            </a>
+          </h1>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="join.html" class="nav-btn">Join Us</a>
               </li>
+              <ul class="nav__menu">
+                <li class="nav__item nav__item--toggle">
+                  <a href="#" class="nav-btn">Menu</a>
+                </li><!--
+                --><li class="nav__item">
+                  <a href="events.html" class="nav-btn">Events</a>
+                </li><!--
+                --><li class="nav__item">
+                  <a href="about.html" class="nav-btn">About</a>
+                </li><!--
+                --><li class="nav__item">
+                  <a href="contact.html" class="nav-btn">Contact</a>
+                </li>
+              </ul>
             </ul>
-          </ul>
-        </nav>
+          </nav>
+        </div>
+      </header>
+      <section class="hero hero--landing">
+        <div class="hero__wrap wrap">
+          <div class="hero__content">
+            <h2 class="hero__tagline">
+              Become mighty!
+            </h2>
+            <a href="join.html" class="btn btn--primary">
+              Join Now
+            </a>
+          </div>
+          <p class="hero__citation">
+            Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
+          </p>
+        </div>
+      </section>
+    </div>
+    <footer class="footer">
+      <div class="wrap">
+        <p class="footer__cta">
+          Great physique awaits you.<br>
+          <a href="join.html" class="footer__btn-cta btn btn--primary">
+            Join Now
+          </a>
+        </p>
+        <p>
+          &copy; 2018
+        </p>
       </div>
-    </header>
+    </footer>
   </main>
   <script src="js/modernizr.js"></script>
 </body>
