Add placeholder sections for landing page. Tweak styles.

--- a/index.html
+++ b/index.html
@@ -42,17 +42,56 @@
         </div>
       </header>
       <section class="hero hero--landing">
-        <div class="hero__wrap wrap">
-          <div class="hero__content">
+        <div class="hero__wrap">
+          <div class="hero__content wrap">
             <h2 class="hero__tagline">
               Become mighty!
             </h2>
-            <a href="join.html" class="btn btn--primary">
+            <a href="join.html" class="hero__btn-cta btn btn--primary">
               Join Now
             </a>
           </div>
           <p class="hero__citation">
             Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
+          </p>
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Membership</h2>
+          <p>
+            Membership details here...
+          </p>
+          <p>
+            <a href="join.html" class="btn">
+              Learn More
+            </a>
+          </p>
+        </div>
+      </section>
+      <section class="section section--alt">
+        <div class="wrap">
+          <h2>Training</h2>
+          <p>
+            Training packages here...
+          </p>
+          <p>
+            <a href="join.html" class="btn">
+              Join Now
+            </a>
+          </p>
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Community</h2>
+          <p>
+            Events and photos here...
+          </p>
+          <p>
+            <a href="events.html" class="btn">
+              View All Events
+            </a>
           </p>
         </div>
       </section>
@@ -65,7 +104,7 @@
             Join Now
           </a>
         </p>
-        <p>
+        <p class="footer_copyright">
           &copy; 2018
         </p>
       </div>
