update Join Us, Events, About, Contact page

--- a/about.html
+++ b/about.html
@@ -41,26 +41,38 @@
           </nav>
         </div>
       </header>
-      <section class="hero">
+      <section class="hero hero--about--landing">
         <div class="hero__wrap">
           <div class="hero__content wrap">
             <h2 class="hero__title">
               About
             </h2>
           </div>
+          <p class="hero__citation">
+            Photo by <a href="https://www.lucanleisure.com/gym/" target="_blank" class="a-light">Lucan Leisure</a>
+          </p>
         </div>
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Heading</h2>
+          <h2>About us</h2>
           <p>
-            Content
+            Mighty Life Fitness (MEF) is a strength and conditioning gym for young and middle-aged adults looking to become stronger and more fit. It offers straightforward and affordable gym membership as well as training packages with highly-experienced coaches from various backgrounds.
           </p>
           <p>
             <a href="join.html" class="btn">
               Button
             </a>
           </p>
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Our team</h2>
+          <p>
+          our team information.
+          </p>
+
         </div>
       </section>
     </div>
