--- a/contact.html
+++ b/contact.html
@@ -41,24 +41,81 @@
           </nav>
         </div>
       </header>
-      <section class="hero">
+      <section class="hero hero--contact--landing">
         <div class="hero__wrap">
           <div class="hero__content wrap">
             <h2 class="hero__title">
               Contact
             </h2>
           </div>
+          <p class="hero__citation">
+            Photo by <a href="https://www.lucanleisure.com/gym/" target="_blank" class="a-light">Lucan Leisure</a>
+          </p>
         </div>
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Heading</h2>
+          <h2>Contact information</h2>
           <p>
-            Content
+            For membership, accounts and club specific inquiries. You can contact the administration office or go to the specific location around you.
+          </p>
+          <h3>Adiministration</h3>
+          <ul class="listings">
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">Head Office</span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price"> BILLING </span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">MEMBER SERVICES</span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+          </ul>
+          <h3>Location</h3>
+          <ul class="listings">
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">Metro Fitness Center</span>
+                <span class="listings__item-name">Address:</span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">Lansdown Fitness Center</span>
+                <span class="listings__item-name">Address:</span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">Lansdown Fitness Center</span>
+                <span class="listings__item-name">Address:</span>
+                <span class="listings__item-name">Tel:</span>
+              </p>
+            </li>
+          </ul>
+
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Contact Us</h2>
+          <p>
+            A form here
           </p>
           <p>
-            <a href="join.html" class="btn">
-              Button
+            <a href="events.html" class="btn">
+              Submit
             </a>
           </p>
         </div>
