--- a/events.html
+++ b/events.html
@@ -41,26 +41,33 @@
           </nav>
         </div>
       </header>
-      <section class="hero">
+      <section class="hero hero--events--landing">
         <div class="hero__wrap">
           <div class="hero__content wrap">
             <h2 class="hero__title">
               Events
             </h2>
           </div>
+          <p class="hero__citation">
+            Photo by <a href="https://www.lucanleisure.com/gym/" target="_blank" class="a-light">Lucan Leisure</a>
+          </p>
         </div>
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Heading</h2>
+          <h2>Upcoming Events</h2>
           <p>
             Content
           </p>
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Past Events</h2>
           <p>
-            <a href="join.html" class="btn">
-              Button
-            </a>
+            Content
           </p>
+        
         </div>
       </section>
     </div>
