--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--landing">
+      <section class="hero hero--home--landing">
         <div class="hero__wrap">
           <div class="hero__content wrap">
             <h2 class="hero__tagline">
