--- a/join.html
+++ b/join.html
@@ -41,24 +41,72 @@
           </nav>
         </div>
       </header>
-      <section class="hero">
+      <section class="hero hero--join--landing">
         <div class="hero__wrap">
           <div class="hero__content wrap">
             <h2 class="hero__title">
               Join Us
             </h2>
           </div>
+          <p class="hero__citation">
+            Photo by <a href="https://www.lucanleisure.com/gym/" target="_blank" class="a-light">Lucan Leisure</a>
+          </p>
         </div>
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Heading</h2>
+          <h2>Introduction</h2>
           <p>
-            Content
+            Introduction Text
+          </p>
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Membership</h2>
+          <p>
+             Membership packages here...
+               Includes access to the gym during open hours and a free personal training session every 3rd month.
+             <ul class="listings">
+               <li class="listings__item">
+                 <p class="listings__item-content">
+                   <span class="listings__item-price">$64/mo</span>
+                   <span class="listings__item-name">Month-by-month</span>
+                   <a href="#" class="btn">Select</a>
+                 </p>
+               </li>
+               <li class="listings__item">
+                 <p class="listings__item-content">
+                   <span class="listings__item-price">$56/mo</span>
+                   <span class="listings__item-name">6 months</span>
+                   <a href="#" class="btn">Select</a>
+                 </p>
+               </li>
+               <li class="listings__item">
+                 <p class="listings__item-content">
+                   <span class="listings__item-price">$48/mo</span>
+                   <span class="listings__item-name">12 months</span>
+                   <a href="#" class="btn">Select</a>
+                 </p>
+               </li>
+             </ul>
+          </p>
+          <!-- <p>
+            <a href="join.html" class="btn">
+              Join Now
+            </a>
+          </p> -->
+        </div>
+      </section>
+      <section class="section">
+        <div class="wrap">
+          <h2>Sign Up</h2>
+          <p>
+           A form here
           </p>
           <p>
-            <a href="join.html" class="btn">
-              Button
+            <a href="events.html" class="btn">
+            Submit
             </a>
           </p>
         </div>
