--- a/contact.html
+++ b/contact.html
@@ -63,20 +63,20 @@
           <ul class="listings">
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price">Head Office</span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name">Head Office</span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price"> BILLING </span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name"> Billing </span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price">MEMBER SERVICES</span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name">Member Services</span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
           </ul>
@@ -84,30 +84,30 @@
           <ul class="listings">
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price">Metro Fitness Center</span>
-                <span class="listings__item-name">Address:</span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name">Metro Fitness Center</span>
+                <span class="listings__item-adress">Address:</span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price">Lansdown Fitness Center</span>
-                <span class="listings__item-name">Address:</span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name">Lansdown Fitness Center</span>
+                <span class="listings__item-adress">Address:</span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-price">Lansdown Fitness Center</span>
-                <span class="listings__item-name">Address:</span>
-                <span class="listings__item-name">Tel:</span>
+                <span class="listings__item-name">Lansdown Fitness Center</span>
+                <span class="listings__item-adress">Address:</span>
+                <span class="listings__item-tel">Tel:</span>
               </p>
             </li>
           </ul>
 
         </div>
       </section>
-      <section class="section">
+      <section class="section section--alt">
         <div class="wrap">
           <h2>Contact Us</h2>
           <p>
