--- a/join.html
+++ b/join.html
@@ -61,7 +61,7 @@
           </p>
         </div>
       </section>
-      <section class="section">
+      <section class="section section--alt">
         <div class="wrap">
           <h2>Membership</h2>
           <p>
