--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           </p>
         </div>
       </section>
-      <section class="section">
+      <section class="section section--alt">
         <div class="wrap">
           <h2>Our team</h2>
           <p>
