Fix hero content positioning.

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
         </div>
       </header>
       <section class="hero hero--contact--landing">
-        <div class="hero__wrap">
-          <div class="hero__content wrap">
+        <div class="hero__wrap wrap">
+          <div class="hero__content">
             <h2 class="hero__title">
               Contact
             </h2>
