--- a/events.html
+++ b/events.html
@@ -42,8 +42,8 @@
         </div>
       </header>
       <section class="hero hero--events--landing">
-        <div class="hero__wrap">
-          <div class="hero__content wrap">
+        <div class="hero__wrap wrap">
+          <div class="hero__content">
             <h2 class="hero__title">
               Events
             </h2>
@@ -67,7 +67,7 @@
           <p>
             Content
           </p>
-        
+
         </div>
       </section>
     </div>
