--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
       </header>
       <section class="hero hero--home--landing">
-        <div class="hero__wrap">
-          <div class="hero__content wrap">
+        <div class="hero__wrap wrap">
+          <div class="hero__content">
             <h2 class="hero__tagline">
               Become mighty!
             </h2>
