--- a/join.html
+++ b/join.html
@@ -41,7 +41,7 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--join--landing">
+      <section class="hero hero--join">
         <div class="hero__wrap wrap">
           <div class="hero__content">
             <h2 class="hero__title">
@@ -49,7 +49,7 @@
             </h2>
           </div>
           <p class="hero__citation">
-            Photo by <a href="https://www.lucanleisure.com/gym/" target="_blank" class="a-light">Lucan Leisure</a>
+            Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
           </p>
         </div>
       </section>
