--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -83,7 +83,7 @@
             <a href="#overview" class="anchor"></a>
           </h2>
           <p>
-            Mighty Life Fitness (MEF) is a strength and conditioning gym <strong>for young and middle-aged adults looking to become stronger and more fit.</strong> It offers straightforward and affordable gym membership as well as training packages with highly-experienced coaches from various backgrounds.
+            Mighty Life Fitness (MLF) is a strength and conditioning gym <strong>for young and middle-aged adults looking to become stronger and more fit.</strong> It offers straightforward and affordable gym membership as well as training packages with highly-experienced coaches from various backgrounds.
           </p>
           <p>
             Fitness is a lifestyle, not an activity. Mighty Life Fitness projects this mantra by having a brand concept that <strong>connects the idea of strength and power with the classical element of earth,</strong> which symbolizes fortitude and growth. MLF also aims to be approachable and inspiring to potential members, thus it harnesses lightweight and earth-like aesthetics to convey a positive vibe while deviating away from the typical “raw” black and white theme of strength gym brands.
