--- a/about.html
+++ b/about.html
@@ -55,24 +55,20 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>About us</h2>
+          <h2>
+            About Us
+          </h2>
           <p>
-            Mighty Life Fitness (MEF) is a strength and conditioning gym for young and middle-aged adults looking to become stronger and more fit. It offers straightforward and affordable gym membership as well as training packages with highly-experienced coaches from various backgrounds.
-          </p>
-          <p>
-            <a href="join.html" class="btn">
-              Button
-            </a>
+            Mighty Life Fitness (MLF) is a strength and conditioning gym for young and middle-aged adults looking to become stronger and more fit. It offers straightforward and affordable gym membership as well as training packages with highly-experienced coaches from various backgrounds.
           </p>
         </div>
       </section>
       <section class="section section--alt">
         <div class="wrap">
-          <h2>Our team</h2>
+          <h2>Our Team</h2>
           <p>
-          our team information.
+            Team details here...
           </p>
-
         </div>
       </section>
     </div>
