--- a/join.html
+++ b/join.html
@@ -55,9 +55,9 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Introduction</h2>
+          <h2>Overview</h2>
           <p>
-            Introduction Text
+            Intro text here...
           </p>
         </div>
       </section>
@@ -65,50 +65,41 @@
         <div class="wrap">
           <h2>Membership</h2>
           <p>
-             Membership packages here...
-               Includes access to the gym during open hours and a free personal training session every 3rd month.
-             <ul class="listings">
-               <li class="listings__item">
-                 <p class="listings__item-content">
-                   <span class="listings__item-price">$64/mo</span>
-                   <span class="listings__item-name">Month-by-month</span>
-                   <a href="#" class="btn">Select</a>
-                 </p>
-               </li>
-               <li class="listings__item">
-                 <p class="listings__item-content">
-                   <span class="listings__item-price">$56/mo</span>
-                   <span class="listings__item-name">6 months</span>
-                   <a href="#" class="btn">Select</a>
-                 </p>
-               </li>
-               <li class="listings__item">
-                 <p class="listings__item-content">
-                   <span class="listings__item-price">$48/mo</span>
-                   <span class="listings__item-name">12 months</span>
-                   <a href="#" class="btn">Select</a>
-                 </p>
-               </li>
-             </ul>
+            Includes access to the gym during open hours and a free personal training session every 3rd month.
           </p>
-          <!-- <p>
-            <a href="join.html" class="btn">
-              Join Now
-            </a>
-          </p> -->
+          <ul class="listings">
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">$64/mo</span>
+                <span class="listings__item-name">Month-by-month</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">$56/mo</span>
+                <span class="listings__item-name">6 months</span>
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <span class="listings__item-price">$48/mo</span>
+                <span class="listings__item-name">12 months</span>
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section">
         <div class="wrap">
           <h2>Sign Up</h2>
-          <p>
-           A form here
-          </p>
-          <p>
-            <a href="events.html" class="btn">
-            Submit
-            </a>
-          </p>
+          <form>
+            <p>
+              Form here...
+            </p>
+            <p>
+              <input type="submit" class="btn btn--primary">
+            </p>
+          </form>
         </div>
       </section>
     </div>
